<resources>
    <string name="app_name">SmartChecking</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="fullname">Fullname</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_out">Log Out</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_fragment">History Fragment</string>
    <string name="setting_fragment">Setting Fragment</string>
    <string name="checking_logs">Checking Logs</string>
    <string name="full_name">Full Name</string>
</resources>