<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                tools:ignore="TextFields" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:autofillHints="" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                app:cornerRadius = "20dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/not_yet_registered_signup_now"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/light_blue_600"
        android:layout_marginBottom="20dp"/>
</LinearLayout>