<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingFragment"
    android:layout_margin="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_user"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/user"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="10dp" />

            <TextView
                android:id="@+id/txtFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/img_user"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_user"
                app:layout_constraintTop_toTopOf="@+id/img_user" />

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtName"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/txtName"
                android:text="@string/username"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_user"
                app:layout_constraintTop_toBottomOf="@+id/txtFullName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:backgroundTint="@color/green"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />
</androidx.constraintlayout.widget.ConstraintLayout>